overlays/magi/monitoring/routes/grafana-http-redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-redirect
spec:
  parentRefs:
    - name: monitoring-gateway
      sectionName: http
  hostnames:
    - grafana.vbalex.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
