overlays/magi/monitoring/routes/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: monitoring-gateway
      sectionName: https
  hostnames:
    - grafana.vbalex.com
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
